--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ input{
     border: 1px solid #dfe1e5;
     border-radius: 24px;
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
-    padding-left: 2rem;
+    padding-left: 2.2rem;
     margin: auto;
     z-index: 3;
     align-self: center;
@@ -130,12 +130,12 @@ input{
     background-repeat: no-repeat;
     width: 30px;
     height: 30px;
-    margin: 0 5px;
+    margin: 0 .5rem;
     
 }
 
 .mic-icon {
-    margin-right: 3rem;
+    margin-right: 1.3rem;
     position: relative;
     left: 0px;
     top: 0px;
