--- a/styles.css
+++ b/styles.css
@@ -97,15 +97,16 @@ svg {
 .input-row{
     width: 95%;
    margin: auto;
+   flex-grow: 1;
 }
 
 input{
-    width: 90%;
+    width: 100%;
     height: 44px;
     border: 1px solid #dfe1e5;
     border-radius: 24px;
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
-    padding-left: 2.2rem;
+    padding-left: 4.5rem;
     margin: auto;
     z-index: 3;
     align-self: center;
@@ -113,13 +114,14 @@ input{
 }
 
 .icon-row {
-    width: 95%;
+    width: 100%;
+    margin: 0 2rem;
+    
     display: flex;
     justify-content: space-between;;
     position: relative;
     top: -2.2rem;
 
-    flex-basis: | auto;
 }
 .search-icon {
     
@@ -135,7 +137,7 @@ input{
 }
 
 .mic-icon {
-    margin-right: 1.3rem;
+   
     position: relative;
     left: 0px;
     top: 0px;
