--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ svg {
 }
 
 .search-row {
-    width: 50%;
+    width: 100%;
     align-self: center;
     margin-top: 20px;
     height: 50px;
@@ -95,7 +95,7 @@ svg {
 }
 
 .input-row{
-    width: 95%;
+    width: 100%;
    margin: auto;
    flex-grow: 1;
 }
@@ -108,7 +108,6 @@ input{
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
     padding-left: 4.5rem;
     margin: auto;
-    z-index: 3;
     align-self: center;
     
 }
@@ -116,7 +115,7 @@ input{
 .icon-row {
     width: 100%;
     margin: 0 2rem;
-    
+    z-index: 3;
     display: flex;
     justify-content: space-between;;
     position: relative;
@@ -146,4 +145,36 @@ input{
     background-repeat: no-repeat;
     width: 30px;
     height: 30px;
+}
+
+.enterbuttons {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 36px;
+    margin-top: 2rem;
+}
+
+.enterbuttons .labutton {
+
+    background-image: -webkit-linear-gradient(top,#f8f9fa,#f8f9fa);
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    color: #3c4043;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+    margin: 1rem;
+}
+
+.labutton:hover {
+    border: solid 1px rgb(212, 212, 212);
 }
