--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ input{
     margin-top: 2rem;
 }
 
-.enterbuttons .labutton {
+.labutton {
 
     background-image: -webkit-linear-gradient(top,#f8f9fa,#f8f9fa);
     background-color: #f8f9fa;
